# ChangeLog for net-print/ink
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/ink/ChangeLog,v 1.21 2013/08/16 09:25:57 mrueg Exp $

  16 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -files/ink-0.4.1-asneeded.patch,
  -files/ink-0.5.0-asneeded.patch, -ink-0.5.0.ebuild:
  Cleanup.

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ink-0.5.1.ebuild:
  x86 stable wrt bug #400459

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ink-0.5.1.ebuild:
  Stable for amd64, wrt bug #400459

  19 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> -ink-0.3.ebuild,
  -ink-0.4.1.ebuild:
  Remove old

*ink-0.5.1 (22 Aug 2011)

  22 Aug 2011; Tim Harder <radhermit@gentoo.org> +ink-0.5.1.ebuild:
  Version bump.

  09 Aug 2010; Markos Chandras <hwoarang@gentoo.org> ink-0.5.0.ebuild:
  Stable on amd64 wrt bug #326059

  01 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> ink-0.5.0.ebuild:
  x86 stable wrt bug #326059

  02 Jan 2010; Thilo Bangert <bangert@gentoo.org> ink-0.5.0.ebuild,
  +files/ink-0.5.0-asneeded.patch:
  dont mess with CFLAGS - use LDFLAGS (bug #248163 again)

*ink-0.5.0 (27 Oct 2009)

  27 Oct 2009; Thilo Bangert <bangert@gentoo.org> +ink-0.5.0.ebuild:
  version bump

  02 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org> ink-0.4.1.ebuild,
  +files/ink-0.4.1-asneeded.patch:
  Add patch to build with --as-needed by Kevin Pyle, closes bug #248163.

*ink-0.4.1 (19 Jun 2007)

  19 Jun 2007; Stefan Schweizer <genstef@gentoo.org> -ink-0.4.0.ebuild,
  +ink-0.4.1.ebuild:
  version bump

*ink-0.4.0 (01 May 2007)

  01 May 2007; Stefan Schweizer <genstef@gentoo.org> -ink-0.3.2_rc1.ebuild,
  +ink-0.4.0.ebuild:
  version bump

*ink-0.3.2_rc1 (16 Sep 2006)

  16 Sep 2006; Stefan Schweizer <genstef@gentoo.org> +ink-0.3.2_rc1.ebuild:
  version bump

  04 Feb 2005; Marcus D. Hanwell <cryos@gentoo.org> ink-0.3.ebuild:
  Marked stable on amd64.

  02 Jan 2005; Marcus Hanwell <cryos@gentoo.org> ink-0.3.ebuild: