@@ -1,4 +1,24 @@
-DIST ink-0.5.1.tar.gz 105174 SHA256 d1985d40baae5cb8bf2c7ea554d24530b1cd95cd93cd143134f19ca7e1e90298
-EBUILD ink-0.5.1.ebuild 505 SHA256 679fc51e37ecb84f16289b0bd2b7caaa6c4e972185ad0cd85b282615a3f9be44 SHA512 06c57cc15aa91a0c166f747edd94a5579187537328e271de2abb3bd40930babb1b095b03724e2bbf4ab90134c295feefd568ebdd3700600c4d9f4180b5a2a8ce WHIRLPOOL adbc9ef7cde2bcd62b1415b9f04bcb5da5b633c6d147adee65adb875989680def390d2d7f33c770d087b9490eb30c72531bf58c2a3677ca3a4462ed43ea62968
-MISC ChangeLog 2612 SHA256 b8f09d2cea0b09445395d2184f2522fc39674149cf1b0cb526b8881f5a943fb0 SHA512 d095da3ea8a5fbf2e62cd1f52d432d98080c69ac7cf762ac6bd072295c50e14e748da33d863e8a020975ddf55e444661b7a67f7b78a5695c11d0484249d7cfce WHIRLPOOL 6b70bafd258dc204e9f304fcb7f12a7effa7edca2161327ba57d00a6e3d9227fe4b485e22100121b2a943d1dcac0818043e6cb94278b8f6590d39cc4547fd3e1
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ink-0.5.1.tar.gz 105174 SHA256 d1985d40baae5cb8bf2c7ea554d24530b1cd95cd93cd143134f19ca7e1e90298 SHA512 12a21279ca4f390c5748b8ab1c62770c82decec1f9bfa3e6c13d7a269a7cb28fb96f92506c532f52fb4e3f1b72012e2c2a08e654a91edb1c73d1f7b778dc5848 WHIRLPOOL 9a5d4ad75ef0ad4fd6879aa1104d55cfdbe333d7411c9265fbf3dccd2cff5ebd4fde5f588f4e1e68abdb4eb9f62695b26e5a91b3ef532c7b441e27734bf86c40
+EBUILD ink-0.5.1.ebuild 610 SHA256 535e2f1e947f6e8ce0b26401d7a26faf9e4c5c36a157fe4329a8711e13480be3 SHA512 938fcdc03aae60debcf36483e109b6e47105ac97ffabeb9b3a48c80cc5046a2685222831589d7efeac52ba7228473f437d3fddb20f5fea8cb8eac37a36c9e508 WHIRLPOOL f093eab5859fa1f2ad6156b17e50317fd8e33e1870bda7318c71db46c2a8dcb84837c7f95aa9bdd912f484b0759d5b7fdfbea6887086f82810510858c2935187
+MISC ChangeLog 2749 SHA256 96ac80d1a3c6c2d2c14089f309bdebba983ece4883cf310fe0f0f0149c35546a SHA512 aa85f7bec707e79f5c824a8571a1864c3bdab88b73205b801c3fca3466043a3729b6d269e119fc38d8396dbe9683abaea7a1a24846ccef54cea3699349440839 WHIRLPOOL 410407d38ba2ae94b4b7c2616eb02dc9a60b63845a57e279780debc64899c0b120b82d0cab285b6062c5c080d0f41c6b4edaf0278fd65b0f1564ef6524241a9f
 MISC metadata.xml 161 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76 SHA512 3b5d653ba492267297653f61d148b859d366b53d9c29670f175c84622f6ad64141e93e30db08e24f87a75e6fcf1ab187cc8783b72aa2ee1709cf1ef6c7c75e22 WHIRLPOOL 2516e48e62e1604c152e32a6336881cb02f3599c23856a220019bc807611880480bfe4af7a60a2bb45efbb93faf89141ccfd9fde69044677604bf976dfb65988
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQIcBAEBCAAGBQJUSYllAAoJELhOzYlK7nn/ZfgQANgg/kkHHWiOxxxOCj8Xa6Of
+hv+yGqXmIftAY/C3MBAK9gVQ4fjZhUCyS4NWOCx3JNK/IeLErOvv69Xm8A5g7TvU
+v8IjsthgEezk2Z0Z++qAIUchRMNj/LS+JgBvMRZKi6H9Hqe3ctJCHNgSKuAXG73/
+WOIsSOS5E4TE2KbDPYIHXdYAyOjs3L26MiCdM+W52F/KmNbMrC1PbEqny+KWeiTz
+OjBI68o2jXjAComoZkOYr+KFAkUvVyeb5iLOn4I4Cpqug54a+ak3m5Vvv6YkFPYo
+wOOjHOniy8FKfdGEfX60Qma5/takxAIlMyiS8NZ3og22g2kShYDlrtleNvZqBquD
+lgqa1/Iku87uSN98but6NSO92nv78EkEHdyOh8p2R4HsVd2QdmaevS+CfOu2UCxP
+Vn+iiOZuVaYszPbVy0nD64XXKW+MLl7ww5igkAqSIS6VhNy9TdZfNCiUMMBxUYHO
+mNrHX7FzIZaGSm3OyaHdApRofsSDJ8bHk6wAMll39Hvfd0cWbDciz9VF2u5bMHq6
+PwYBClypzZuwhuuGLW2VSTsDy+fXDz49xxE/iKrw+sjh2f4c5foDdfeEolYBRWvn
+iRuHSRAVTTjAlzwuSpGdkuDKWFYfNxfgjbWZD383rkCFQmIeyaXqNCjzZ2/CP5nu
+5PRdXRdJBZfmHmZHuBjN
+=uuOj
+-----END PGP SIGNATURE-----
