@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/ink/ink-0.5.1.ebuild,v 1.3 2012/02/24 14:15:53 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/ink/ink-0.5.1.ebuild,v 1.4 2014/10/23 23:04:24 tamiko Exp $
 
-EAPI="4"
+EAPI="5"
 
 DESCRIPTION="A command line utility to display the ink level of your printer"
 SRC_URI="mirror://sourceforge/ink/${P/_}.tar.gz"
@@ -15,3 +15,8 @@ IUSE=""
 
 DEPEND=">net-print/libinklevel-0.8"
 RDEPEND="${DEPEND}"
+
+src_configure() {
+	# always use /bin/bash as configure shell, bug #526548
+	CONFIG_SHELL=/bin/bash default
+}
