@@ -1,6 +1,9 @@
 # ChangeLog for net-print/ink
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/ink/ChangeLog,v 1.21 2013/08/16 09:25:57 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/ink/ChangeLog,v 1.22 2014/10/23 23:04:24 tamiko Exp $
+
+  23 Oct 2014; Matthias Maier <tamiko@gentoo.org> ink-0.5.1.ebuild:
+  switch to EAPI 5, always use bash for configuration, bug #526548
 
   16 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -files/ink-0.4.1-asneeded.patch,
   -files/ink-0.5.0-asneeded.patch, -ink-0.5.0.ebuild:
